test/cases/x86_64-linux/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-linux
//
// :604:45: error: root struct of file 'tmp' has no member named 'main'
// :553:12: note: called from here
// :503:36: note: called from here
// :466:17: note: called from here
